tests/error/effects_errors/pure_result.err
Error: Too many effects (at $FILE:6:3)
  | 
4 | @guppy(max_effects=[])
5 | def main() -> int:
6 |    result("foo", True)
  |    ^^^^^^ Callee of type `forall . (str @comptime, bool) -> None` has
  |           effects <UNKNOWN> that exceed those allowed

Note:
  | 
3 | 
4 | @guppy(max_effects=[])
  |  --------------------- Allowed effects `[]` declared here

Guppy compilation failed due to 1 previous error
